2011-03-03 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/functions_reporting.php: refixed the status when the agent have
	any module critical and any alert fired.

2011-03-02 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/functions_reporting.php: added the call to
	"get_agentmodule_status" without check the alerts status for the color.
	 
	* include/functions_db.php: in function "get_agentmodule_status" added new
	parameter "$without_alerts" flag for check without alerts. 

2011-03-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	Merged bugfix from trunk.

	* include/functions_db.php: Added missing function get_profile_filter.

2011-03-01 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* operation/events/events_list.php: fixed the html entities in the extend
	list.

2011-02-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/ajax/visual_console_builder.ajax.php
	 godmode/reporting/visual_console_builder.editor.js: Status information is
	saved when static graph are created in visual console.
	* godmode/reporting/visual_console_builder.elements.php: Fixed wrong call to
	__() function from functions_db.

2011-02-25  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_alerts.php: Deleted 'module_action_threshold'.
	It's a version 4.0 feature.
	(Fixed alert action addition does not work.)

2011-02-23  Ramon Novoa  <rnovoa@artica.es>

	* pandora_console.redhat.spec: Removed PEAR dependencies.

2011-02-23  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/control, DEBIAN/postinst, pandora_console.spec: Removed PEAR
	  dependencies.

2011-02-23  Sergio Martin <sergio.martin@artica.es>

	* extensions/update_manager/lib/libupdate_manager_client.php
	extensions/update_manager/main.php: Fixed force bit for
	offline updates and restore sql begin and commit

2011-02-23  Sergio Martin <sergio.martin@artica.es>

	* extensions/update_manager.php